--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -38,9 +38,9 @@
                               <i class="fa fa-edit"></i>
                           </a>
                       }
-                      <div class="modal fade" id="model-@composition.ID" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                          <div class="modal-content">
+                      <div class="modal fade bd-example-modal-lg" id="model-@composition.ID" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                          <div class="modal-dialog modal-lg">
+                            <div class="modal-content">         
                             <div class="modal-header">
                               <h5 class="modal-title" id="exampleModalLongTitle">@composition.Title</h5>
                               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
