--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">    
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Profile</a>
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile</a>
                             <div class="dropdown-menu">
                                 <div class="dropdown-item" id="switch-theme">
                                     @if(Context.Request.Cookies["theme"] == "dark")
