--- a/Views/Composition/Edit.cshtml
+++ b/Views/Composition/Edit.cshtml
@@ -10,7 +10,7 @@ else
 {
     <div class="row justify-content-center">
         <div class="col-lg-9 col-xl-9">
-            <form asp-action="Edit">
+            <form asp-controller="Composition" asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <input asp-for="Title" class="form-control" required>
@@ -28,6 +28,15 @@ else
                 <div class="form-group">
                     <textarea class="form-control" asp-for="Summary" class="form-control" rows="10"></textarea>
                 </div>
+
+                @* TABLICA *@
+
+                <div class="form-group" align="center">
+                    <a class="btn btn-outline-secondary" type="button" asp-controller="Chapter" asp-action="New"
+                            asp-route-compID="@ViewContext.RouteData.Values["id"]"
+                            asp-route-returnUrl="@Url.ActionLink()">Add chapter</a>
+                </div>
+
                 <div class="form-group" align="center">
                     <a href="javascript:history.go(-1)" type="button" class="btn btn-secondary" onclick="return confirm('you sure? :)');">Cancel</a>
                     <input type="submit" value="Save" class="btn btn-primary" 
