--- a/Views/Composition/Edit.cshtml
+++ b/Views/Composition/Edit.cshtml
@@ -29,7 +29,23 @@ else
                     <textarea class="form-control" asp-for="Summary" class="form-control" rows="10"></textarea>
                 </div>
 
-                @* TABLICA *@
+                <div class="table-responsive table-hover">
+                    <table class="table">
+                        @foreach(var chapter in Model.Chapters)
+                        {
+                            <tr>
+                                <td>
+                                    @chapter.Title
+                                </td>
+                                <td>
+                                    <a asp-controller="Chapter" asp-action="Edit" asp-route-id="@chapter.ID" asp-route-returnUrl="@Url.ActionLink()" type="button" class="btn btn-outline-secondary">
+                                        <i class="fa fa-edit"></i>
+                                    </a> 
+                                </td>
+                            </tr>
+                        }
+                    </table>
+                </div>
 
                 <div class="form-group" align="center">
                     <a class="btn btn-outline-secondary" type="button" asp-controller="Chapter" asp-action="New"
@@ -38,19 +54,17 @@ else
                 </div>
 
                 <div class="form-group" align="center">
-                    <a href="javascript:history.go(-1)" type="button" class="btn btn-secondary" onclick="return confirm('you sure? :)');">Cancel</a>
-                    <input type="submit" value="Save" class="btn btn-primary" 
+                    <form  asp-controller="Composition" asp-action="DeleteComp"
+                            asp-route-id="@ViewContext.RouteData.Values["id"]"
+                            asp-route-returnUrl="@ViewContext.RouteData.Values["returnUrl"]">
+                        <button  type="submit" class="mr-2 ml-2 btn btn-danger">Delete</button>
+                    </form>
+                    <a href="javascript:history.go(-1)" type="button" class="mr-2 ml-2 btn btn-secondary" onclick="return confirm('you sure? :)');">Cancel</a>
+                    <input type="submit" value="Save" class="mr-2 ml-2 btn btn-primary" 
                             asp-route-id="@ViewContext.RouteData.Values["id"]"
                             asp-route-returnUrl="@ViewContext.RouteData.Values["returnUrl"]">
                 </div>
             </form>
         </div>
     </div>
-
-    <form  asp-controller="Composition" asp-action="DeleteComp"
-            asp-route-id="@ViewContext.RouteData.Values["id"]"
-            asp-route-returnUrl="@ViewContext.RouteData.Values["returnUrl"]">
-        <button  type="submit" class="btn btn-danger">Delete</button>
-    </form>
-
 }
