--- a/Views/Composition/Edit.cshtml
+++ b/Views/Composition/Edit.cshtml
@@ -38,7 +38,7 @@ else
                                     @chapter.Title
                                 </td>
                                 <td>
-                                    <a asp-controller="Chapter" asp-action="Edit" asp-route-id="@chapter.ID" asp-route-returnUrl="@Url.ActionLink()" type="button" class="btn btn-outline-secondary">
+                                    <a asp-controller="Chapter" asp-action="Edit" asp-route-id="@chapter.ID" asp-route-returnUrl="@Url.ActionLink()" type="button" class="btn btn-secondary">
                                         <i class="fa fa-edit"></i>
                                     </a> 
                                 </td>
@@ -48,7 +48,7 @@ else
                 </div>
 
                 <div class="form-group" align="center">
-                    <a class="btn btn-outline-secondary" type="button" asp-controller="Chapter" asp-action="New"
+                    <a class="btn btn-secondary" type="button" asp-controller="Chapter" asp-action="New"
                             asp-route-compID="@ViewContext.RouteData.Values["id"]"
                             asp-route-returnUrl="@Url.ActionLink()">Add chapter</a>
                 </div>
@@ -59,8 +59,8 @@ else
                             asp-route-returnUrl="@ViewContext.RouteData.Values["returnUrl"]">
                         <button  type="submit" class="mr-2 ml-2 btn btn-danger">Delete</button>
                     </form>
-                    <a href="javascript:history.go(-1)" type="button" class="mr-2 ml-2 btn btn-secondary" onclick="return confirm('you sure? :)');">Cancel</a>
-                    <input type="submit" value="Save" class="mr-2 ml-2 btn btn-primary" 
+                    <a href="javascript:history.go(-1)" type="button" class="mr-2 ml-2 btn btn-primary" onclick="return confirm('you sure? :)');">Cancel</a>
+                    <input type="submit" value="Save" class="mr-2 ml-2 btn btn-success" 
                             asp-route-id="@ViewContext.RouteData.Values["id"]"
                             asp-route-returnUrl="@ViewContext.RouteData.Values["returnUrl"]">
                 </div>
