--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,11 +26,9 @@
 
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">    
-                        <li class="nav-item dropdown mr-3">
-                            <a class="nav-link dropdown-toggle" type="button" data-toggle="dropdown" data-target="#profile-dropdown" aria-haspopup="true" aria-expanded="false">
-                                Profile
-                            </a>
-                            <div class="dropdown-menu" id="profile-dropdown">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" data-disabled="true" aria-expanded="false">Profile</a>
+                            <div class="dropdown-menu">
                                 <div class="dropdown-item" id="switch-theme">
                                     @if(Context.Request.Cookies["theme"] == "dark")
                                     {
@@ -72,7 +70,8 @@
     </footer>
     
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    @* <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
