Now can send requests

--- a/Views/Composition/Edit.cshtml
+++ b/Views/Composition/Edit.cshtml
@@ -1,5 +1,7 @@
 @model coursework_itransition.Models.Composition
 
+<script type="module" src="~/js/Composition/Edit.js"></script>
+
 @if(Model == null)
 {
     <h2>Something went wrong :(</h2>
