--- a/Views/Administrator/Administrator.cshtml
+++ b/Views/Administrator/Administrator.cshtml
@@ -5,7 +5,17 @@
 @model coursework_itransition.Controllers.AdministratorController
 @using Microsoft.EntityFrameworkCore
 
-<div class="p-2 text-center bg-dark">     
+<style>
+    .size {
+        white-space: nowrap; /* Отменяем перенос текста */
+        overflow: hidden; /* Обрезаем содержимое */
+        text-overflow: ellipsis; /* Многоточие */
+    }
+    table { table-layout: fixed; }
+    table th, table td { overflow: hidden; }
+</style>
+
+<div class="p-2 text-center bg-dark">
     <h3 class="mb-2">
         Users
     </h3>
@@ -17,7 +27,7 @@
                     <th>Name</th>
                     <th>Email</th>
                     <th>Status</th>
-                    <th>Role</th>
+                    <th>Admin</th>
                     <th></th>
                 </tr>
             </thead>
@@ -26,7 +36,7 @@
                 <tr>
                     <td><p>@user.Name</p></td>
                     <td><p>@user.Email</p></td>
-                    <td> 
+                    <td>
                         @if (user.LockoutEnabled)
                         {
                             <p>not ban</p>
@@ -38,100 +48,113 @@
                     </td>
                     @if(await Model._userManager.IsInRoleAsync(user,"Administrator"))
                     {
-                      <td>Yes</td>  
+                    <td>Yes</td>
                     }
                     else
                     {
-                      <td></td>
+                    <td></td>
                     }
                     <td>
                         <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#model-@user.Id" >
                             <i class="fa fa-eye"></i>
-                        </button>    
+                        </button>
                         @* <div class="modal fade bd-example-modal-lg" id="model-@b.Id" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-                          <div class="modal-dialog modal-lg">
+                        <div class="modal-dialog modal-lg">
                             <div class="modal-content">                              *@
                         <div class="modal fade" id="model-@user.Id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog" role="document">
-                              <div class="modal-content">
+                            <div class="modal-content">
                                 <div class="modal-header">
-                                  <h5 class="modal-title" id="exampleModalLabel">@user.Name</h5>
-                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                  </button>
+                                <h5 class="modal-title" id="exampleModalLabel">@user.Name</h5>
+                                <div class="ml-auto d-flex align-items-center">
+                                    <div class="dropdown">
+                                        <a class="h4 mr-3 dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                                        </a>
+                                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                                            @if (user.LockoutEnabled)
+                                            {
+                                                <a type="submit" class="dropdown-item btn">Ban</a>
+                                            }
+                                            else
+                                            {
+                                                <a type="submit" class="dropdown-item btn">Unban</a>
+                                            }
+                                            @if(await Model._userManager.IsInRoleAsync(user,"Administrator"))
+                                            {
+                                                <a type="submit" class="dropdown-item btn">Remove admin status</a>
+                                            }
+                                            else
+                                            {
+                                                <a type="submit" class="dropdown-item btn">Make admin</a>
+                                            }
+                                            <form asp-controller="Administrator" asp-action="DeleteUser"
+                                                asp-route-UserID="@user.Id">
+                                                <a type="submit" class="dropdown-item btn btn-danger" >Delete user</a>
+                                            </form>
+                                        </div>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                </div>
                                 </div>
                                 <div class="modal-body">
-                                  <form>
-                                    <div class="form-group">
-                                      <label for="recipient-name" class="col-form-label">EMAIL  : @user.Email</label> <br/>
-                                      <label for="recipient-name" class="col-form-label">USER ID: @user.Id</label>
+                                    <div class="contaner">
+                                        <div class="col-md-2">
+                                            EMAIL:  
+                                        </div>
+                                        <div class="col-md-4">
+                                            @user.Email
+                                        </div>
+                                        <div class="col-md-2">
+                                            USER ID:
+                                        </div>
+                                        <div class="col-md-4">
+                                            @user.Id
+                                        </div>
                                     </div>
-                                    <div class="form-group">
-                                      
-                                      @if (user.LockoutEnabled)
-                                      {
-                                        <button type="button" class="btn btn-secondary">Ban</button>
-                                      }
-                                      else
-                                      {
-                                        <button type="button" class="btn btn-secondary">Unban</button>
-                                      }
-                                      @if(await Model._userManager.IsInRoleAsync(user,"Administrator"))
-                                      {
-                                        <button type="button" class="btn btn-secondary">Remove admin status</button>       
-                                      }
-                                      else
-                                      {
-                                        <button type="button" class="btn btn-secondary">Make admin</button>       
-                                      }       
-                                      <form  asp-controller="Administrator" asp-action="DeleteUser"
-                                         asp-route-UserID="@user.Id">
-                                          <button type="submit" class="btn btn-danger" >Delete user</button>       
-                                      </form>
+                                        @if(user.Compositions.Count > 0)
+                                        {
+                                        <div class="p-2 text-center bg-dark">
+                                            <h3 class="mb-2">
+                                                Composition
+                                            </h3>
+                                        </div>
+                                        <div class="table-responsive table-striped">
+                                            <table class="table">
+                                                @foreach (var composition in user.Compositions)
+                                                {
+                                                    <tr>
+                                                        <td>
+                                                            <div>@composition.Title</div>
+                                                        </td>
+                                                        <td class="text-right">
+                                                            <button type="button" class="btn btn-secondary">
+                                                                <i class="fa fa-eye"></i>
+                                                            </button>
+                                                            <a asp-controller="Composition" asp-action="Edit" asp-route-id="@composition.ID" asp-route-returnUrl="@Url.ActionLink()" type="button" class="btn btn-secondary">
+                                                                <i class="fa fa-edit"></i>
+                                                            </a>
+                                                        </td>
+                                                    </tr>
+                                                }
+                                            </table>
+                                        </div>
+                                        }
+                                        else
+                                        {
+                                            <label for="message-text" class="col-form-label">No composition</label>
+                                        }
                                     </div>
-                                    @if(user.Compositions.Count > 0)
-                                    {
-                                      <div class="p-2 text-center bg-dark">     
-                                          <h3 class="mb-2">
-                                              Composition
-                                          </h3>
-                                      </div>
-                                      <table class="table">
-                                          @foreach (var composition in user.Compositions)
-                                          {
-                                            <tr>
-                                              <td>
-                                                <div>@composition.Title</div>
-                                              </td>
-                                              <td>
-                                                <button type="button" class="btn btn-secondary">
-                                                  <i class="fa fa-eye"></i>
-                                                </button>
-                                              </td>
-                                              <td>
-                                                <a asp-controller="Composition" asp-action="Edit" asp-route-id="@composition.ID" asp-route-returnUrl="@Url.ActionLink()" type="button" class="btn btn-secondary">
-                                                  <i class="fa fa-edit"></i>
-                                                </a>
-                                              </td>
-                                            </tr>
-                                          }
-                                      </table>
-                                    }
-                                    else
-                                    {
-                                      <label for="message-text" class="col-form-label">No composition</label>
-                                    }
-                                  </form>
-                                </div>
                                 <div class="modal-footer">
-                                  <button type="button" class="btn btn-secondarys" data-dismiss="modal">Close</button>
-                                  @* <button type="button" class="btn btn-primary">Send message</button> *@
+                                <button type="button" class="btn" data-dismiss="modal">Close</button>
+                                @* <button type="button" class="btn btn-primary">Send message</button> *@
                                 </div>
-                              </div>
+                            </div>
                             </div>
                         </div>
                     </td>
                 </tr>
             }
-        </table>    
+        </table>
 </div>
