--- a/Views/Administrator/Administrator.cshtml
+++ b/Views/Administrator/Administrator.cshtml
@@ -5,156 +5,142 @@
 @model coursework_itransition.Controllers.AdministratorController
 @using Microsoft.EntityFrameworkCore
 
-<style>
-    .size {
-        white-space: nowrap; /* Отменяем перенос текста */
-        overflow: hidden; /* Обрезаем содержимое */
-        text-overflow: ellipsis; /* Многоточие */
-    }
-    table { table-layout: fixed; }
-    table th, table td { overflow: hidden; }
-</style>
+<link rel="stylesheet" href="~/css/administrator.css"/>
 
 <div class="p-2 text-center bg-dark">
     <h3 class="mb-2">
         Users
     </h3>
 </div>
-<div class="table-responsive table-striped">
-        <table class="table">
+<div class="table-striped table-responsive-sm">
+        <table class="table resizeble">
             <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Status</th>
-                    <th>Admin</th>
-                    <th></th>
+                    <th class="th-Buttons"></th>
+                    <th class="th-Name">Name</th>
+                    <th class="th-Email">Email</th>
+                    <th class="th-Status">Status</th>
+                    <th class="th-Admin">Admin</th>
                 </tr>
             </thead>
-            @foreach (var user in Model._context.Users.Include(comp=>comp.Compositions))
-            {
-                <tr>
-                    <td><p>@user.Name</p></td>
-                    <td><p>@user.Email</p></td>
-                    <td>
-                        @if (user.LockoutEnabled)
+            <tboby>
+                @foreach (var user in Model._context.Users.Include(comp=>comp.Compositions))
+                {
+                    <tr>
+                        <td>
+                            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#model-@user.Id" >
+                                <i class="fa fa-eye"></i>
+                            </button>
+                            <div class="modal fade" id="model-@user.Id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title">@user.Name</h5>
+                                            <div class="ml-auto d-flex align-items-center">
+                                                <div class="dropdown">
+                                                    <a class="h4 mr-3 dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                                                    </a>
+                                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                                                        @if (user.LockoutEnabled)
+                                                        {
+                                                            <a type="submit" class="dropdown-item btn">Ban</a>
+                                                        }
+                                                        else
+                                                        {
+                                                            <a type="submit" class="dropdown-item btn">Unban</a>
+                                                        }
+                                                        @if(await Model._userManager.IsInRoleAsync(user,"Administrator"))
+                                                        {
+                                                            <a type="submit" class="dropdown-item btn">Remove admin status</a>
+                                                        }
+                                                        else
+                                                        {
+                                                            <a type="submit" class="dropdown-item btn">Make admin</a>
+                                                        }
+                                                        <form asp-controller="Administrator" asp-action="DeleteUser"
+                                                            asp-route-UserID="@user.Id">
+                                                            <a type="submit" class="dropdown-item btn btn-danger" >Delete user</a>
+                                                        </form>
+                                                    </div>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="modal-body">
+                                            <table>
+                                                <tr>
+                                                    <td>EMAIL:</td>
+                                                    <td>@user.Email</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>USER ID:</td>
+                                                    <td>@user.Id</td>
+                                                </tr>
+                                            </table>
+                                            @if(user.Compositions.Count > 0)
+                                            {
+                                                <div class="p-2 text-center bg-dark">
+                                                    <h3 class="mb-2">
+                                                        Composition
+                                                    </h3>
+                                                </div>
+                                                <div class="table-responsive table-striped">
+                                                    <table class="table resizeble">
+                                                        @foreach (var composition in user.Compositions)
+                                                        {
+                                                            <tr>
+                                                                <td>
+                                                                    <div>@composition.Title</div>
+                                                                </td>
+                                                                <td class="text-right">
+                                                                    <button type="button" class="btn btn-secondary">
+                                                                        <i class="fa fa-eye"></i>
+                                                                    </button>
+                                                                    <a asp-controller="Composition" asp-action="Edit" asp-route-id="@composition.ID" asp-route-returnUrl="@Url.ActionLink()" type="button" class="btn btn-secondary">
+                                                                        <i class="fa fa-edit"></i>
+                                                                    </a>
+                                                                </td>
+                                                            </tr>
+                                                        }
+                                                    </table>
+                                                </div>
+                                            }
+                                            else
+                                            {
+                                                <label for="message-text" class="col-form-label">No composition</label>
+                                            }
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn" data-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div> 
+                        </td>
+                        <td><p class="size">@user.Name</p></td>
+                        <td><p class="size">@user.Email</p></td>
+                        <td>
+                            @if (user.LockoutEnabled)
+                            {
+                                <p>not ban</p>
+                            }
+                            else
+                            {
+                                <p>ban</p>
+                            }
+                        </td>
+                        @if(await Model._userManager.IsInRoleAsync(user,"Administrator"))
                         {
-                            <p>not ban</p>
+                        <td>Yes</td>
                         }
                         else
                         {
-                            <p>ban</p>
+                        <td></td>
                         }
-                    </td>
-                    @if(await Model._userManager.IsInRoleAsync(user,"Administrator"))
-                    {
-                    <td>Yes</td>
-                    }
-                    else
-                    {
-                    <td></td>
-                    }
-                    <td>
-                        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#model-@user.Id" >
-                            <i class="fa fa-eye"></i>
-                        </button>
-                        @* <div class="modal fade bd-example-modal-lg" id="model-@b.Id" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-lg">
-                            <div class="modal-content">                              *@
-                        <div class="modal fade" id="model-@user.Id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">@user.Name</h5>
-                                <div class="ml-auto d-flex align-items-center">
-                                    <div class="dropdown">
-                                        <a class="h4 mr-3 dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                                            @if (user.LockoutEnabled)
-                                            {
-                                                <a type="submit" class="dropdown-item btn">Ban</a>
-                                            }
-                                            else
-                                            {
-                                                <a type="submit" class="dropdown-item btn">Unban</a>
-                                            }
-                                            @if(await Model._userManager.IsInRoleAsync(user,"Administrator"))
-                                            {
-                                                <a type="submit" class="dropdown-item btn">Remove admin status</a>
-                                            }
-                                            else
-                                            {
-                                                <a type="submit" class="dropdown-item btn">Make admin</a>
-                                            }
-                                            <form asp-controller="Administrator" asp-action="DeleteUser"
-                                                asp-route-UserID="@user.Id">
-                                                <a type="submit" class="dropdown-item btn btn-danger" >Delete user</a>
-                                            </form>
-                                        </div>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                </div>
-                                </div>
-                                <div class="modal-body">
-                                    <div class="contaner">
-                                        <div class="col-md-2">
-                                            EMAIL:  
-                                        </div>
-                                        <div class="col-md-4">
-                                            @user.Email
-                                        </div>
-                                        <div class="col-md-2">
-                                            USER ID:
-                                        </div>
-                                        <div class="col-md-4">
-                                            @user.Id
-                                        </div>
-                                    </div>
-                                        @if(user.Compositions.Count > 0)
-                                        {
-                                        <div class="p-2 text-center bg-dark">
-                                            <h3 class="mb-2">
-                                                Composition
-                                            </h3>
-                                        </div>
-                                        <div class="table-responsive table-striped">
-                                            <table class="table">
-                                                @foreach (var composition in user.Compositions)
-                                                {
-                                                    <tr>
-                                                        <td>
-                                                            <div>@composition.Title</div>
-                                                        </td>
-                                                        <td class="text-right">
-                                                            <button type="button" class="btn btn-secondary">
-                                                                <i class="fa fa-eye"></i>
-                                                            </button>
-                                                            <a asp-controller="Composition" asp-action="Edit" asp-route-id="@composition.ID" asp-route-returnUrl="@Url.ActionLink()" type="button" class="btn btn-secondary">
-                                                                <i class="fa fa-edit"></i>
-                                                            </a>
-                                                        </td>
-                                                    </tr>
-                                                }
-                                            </table>
-                                        </div>
-                                        }
-                                        else
-                                        {
-                                            <label for="message-text" class="col-form-label">No composition</label>
-                                        }
-                                    </div>
-                                <div class="modal-footer">
-                                <button type="button" class="btn" data-dismiss="modal">Close</button>
-                                @* <button type="button" class="btn btn-primary">Send message</button> *@
-                                </div>
-                            </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-            }
+                    </tr>
+                }
+            </tbody>
         </table>
 </div>
